// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon> renders 1`] = `
<Image
  resizeMode="contain"
  source={
    Object {
      "testUri": "../../../components/Icon/assets/base.png",
    }
  }
  style={
    Object {
      "backgroundColor": "transparent",
      "height": 20,
      "width": 20,
    }
  }
/>
`;

exports[`<Icon> when {color} (only Native) 1`] = `
<Image
  resizeMode="contain"
  source={
    Object {
      "testUri": "../../../components/Icon/assets/base.png",
    }
  }
  style={
    Object {
      "backgroundColor": "transparent",
      "height": 20,
      "tintColor": "#ef5160",
      "width": 20,
    }
  }
/>
`;

exports[`<Icon> when {invert} (only Web) 1`] = `
<Image
  resizeMode="contain"
  source={
    Object {
      "testUri": "../../../components/Icon/assets/base.png",
    }
  }
  style={
    Object {
      "backgroundColor": "transparent",
      "filter": "invert(100%)",
      "height": 20,
      "width": 20,
    }
  }
/>
`;

exports[`<Icon> when {size} 1`] = `
<Image
  resizeMode="contain"
  source={
    Object {
      "testUri": "../../../components/Icon/assets/base.png",
    }
  }
  style={
    Object {
      "backgroundColor": "transparent",
      "height": 48,
      "width": 48,
    }
  }
/>
`;

exports[`<Icon> when {style} 1`] = `
<Image
  resizeMode="contain"
  source={
    Object {
      "testUri": "../../../components/Icon/assets/base.png",
    }
  }
  style={
    Object {
      "backgroundColor": "#f69a37",
      "height": 20,
      "width": 20,
    }
  }
/>
`;

exports[`<Icon> when {value} 1`] = `
<Image
  resizeMode="contain"
  source={
    Object {
      "uri": "menu",
    }
  }
  style={
    Object {
      "backgroundColor": "transparent",
      "height": 20,
      "width": 20,
    }
  }
/>
`;

exports[`<Icon> when {value} as uri 1`] = `
<Image
  resizeMode="contain"
  source={
    Object {
      "uri": "https://api.adorable.io/avatars/48/8",
    }
  }
  style={
    Object {
      "backgroundColor": "transparent",
      "height": 20,
      "width": 20,
    }
  }
/>
`;
